added one news about aaai26 attendance and removed the old news

--- a/index.html
+++ b/index.html
@@ -185,6 +185,12 @@
 							<ul class="news">
 
 								<li class="row-fluid">
+									<span class="news-date span3">Jan, 2026</span>
+									<span class="news-content span9">I will attend <a href="https://aaai.org/conference/aaai/aaai-26/" target="_blank">AAAI 2026</a> to present our paper <a href="papers/articles/kwon_hierarchicalprune_aaai26.pdf" target="_blank">"HierarchicalPrune: Position-Aware Compression for Large-Scale Diffusion Models"</a>. See you all in Singapore! <font color="red">[Talk]</font>
+									</span>
+								</li>
+
+								<li class="row-fluid">
 									<span class="news-date span3">Nov, 2025</span>
 									<span class="news-content span9">Our paper <a href="papers/articles/kwon_hierarchicalprune_aaai26.pdf" target="_blank">"HierarchicalPrune: Position-Aware Compression for Large-Scale Diffusion Models"</a> is accepted by AAAI 2026 <font color="red">[Paper]</font></span>
 								</li>
@@ -244,131 +250,6 @@
 									<span class="news-date span3">Jul, 2024</span>
 									<span class="news-content span9">I will attend <a href="https://icml.cc/" target="_blank">ICML 2024</a> to present our paper <a href="papers/articles/kwon_tinytrain_icml24.pdf" target="_blank">"TinyTrain: Resource-Aware Task-Adaptive Sparse Training of DNNs at the Data-Scarce Edge"</a>. See you all in Vienna, Austria! <font color="red">[Talk]</font>
 									</span>
-								</li>
-
-								<li class="row-fluid">
-									<span class="news-date span3">May, 2024</span>
-									<span class="news-content span9">Our paper <a href="papers/articles/kwon_tinytrain_icml24.pdf" target="_blank">"TinyTrain: Resource-Aware Task-Adaptive Sparse Training of DNNs at the Data-Scarce Edge"</a> is accepted by ICML 2024 <font color="red">[Paper]</font></span>
-								</li>
-
-								<li class="row-fluid">
-									<span class="news-date span3">Mar, 2024</span>
-									<span class="news-content span9">I presented our paper <a href="papers/articles/jia_ur2m_percom24.pdf" target="_blank">"UR2M: Uncertainty and Resource-Aware Event Detection on Microcontrollers"</a> on behalf of 1st author, <a href="https://www.cl.cam.ac.uk/~hj359/" target="_blank">Hong</a>, at <a href="https://www.percom.org/" target="_blank">IEEE PerCom 2024</a> <font color="red">[Talk]</font>
-									</span>
-								</li>
-
-								<li class="row-fluid">
-									<span class="news-date span3">Feb, 2024</span>
-									<span class="news-content span9">I have been invited to give a talk regarding Efficient Continual and On-Device Learning for Edge Computing Platforms at <a href="https://sites.google.com/view/efficientml" target="_blank">EfficientML Reading Group</a> <font color="red">[Talk]</font>
-									</span>
-								</li>
-
-								<li class="row-fluid">
-									<span class="news-date span3">Dec, 2023</span>
-									<span class="news-content span9">Our paper <a href="papers/articles/jia_ur2m_percom24.pdf" target="_blank">"UR2M: Uncertainty and Resource-Aware Event Detection on Microcontrollers"</a> is accepted to PerCom 2024 (Accpetance Rate: 14.5%) <font color="red">[Paper]</font></span>
-								</li>
-
-								<li class="row-fluid">
-									<span class="news-date span3">Nov, 2023</span>
-									<span class="news-content span9">Our paper <a href="papers/articles/mogavi_usergpt_chb23.pdf" target="_blank">"ChatGPT in education: A blessing or a curse? A qualitative study exploring early adopters’ utilization and perceptions"</a> is accepted to Computers in Human Behavior: Artificial Humans 2023 <font color="red">[Paper]</font></span>
-								</li>
-
-								<li class="row-fluid">
-									<span class="news-date span3">Nov, 2023</span>
-									<span class="news-content span9">I presented 2 talks regarding data-and memory-efficient continual learning and on-device training at the extreme edge at <a href="https://sensys.acm.org/2023/" target="_blank">SenSys 2023</a> <font color="red">[Talk]</font>
-									</span>
-								</li>
-
-								<li class="row-fluid">
-									<span class="news-date span3">Oct, 2023</span>
-									<span class="news-content span9">Our paper <a href="papers/articles/kwon_lifelearner_sensys23.pdf" target="_blank">"LifeLearner: Hardware-Aware Meta Continual Learning System for Embedded Computing Platforms"</a> is accepted to SenSys 2023 (Accpetance Rate: 18.9%) <font color="red">[Paper]</font></span>
-								</li>
-
-
-								<li class="row-fluid">
-									<span class="news-date span3">Sep, 2023</span>
-									<span class="news-content span9">
-									I embarked on a new chapter in my journey after (almost) completing my PhD: I joined <a href="https://research.samsung.com/aicenter_cambridge" target="_blank">Samsung AI</a> as a Research Scientist. <font color="red">[Job]</font>
-									</span>
-								</li>
-
-								<li class="row-fluid">
-									<span class="news-date span3">Aug, 2023</span>
-									<span class="news-content span9">I am happy to serve as Artifact Evaluation Committee for <a href="https://sigmobile.org/mobicom/2023/index.html" target="_blank">MobiCom 2023</a></span>
-								</li>
-
-								<li class="row-fluid">
-									<span class="news-date span3">Mar, 2022</span>
-									<span class="news-content span9">I have been invited to give a talk, <a href="#news-travel">"Deep Learning at the Extreme Edge"</a>, at Cambridge Korea Academic Society (CKAS) <font color="red">[Talk]</font>
-									</span>
-								</li>
-
-								<li class="row-fluid">
-									<span class="news-date span3">Sep, 2022</span>
-									<span class="news-content span9">Our paper <a href="papers/articles/vallapuram_causal_asonam22.pdf" target="_blank">"Causal Analysis on the Anchor Store Effect in a Location-based Social Network"</a> is accepted to ASONAM 2022 <font color="red">[Paper]</font></span>
-								</li>
-
-								<li class="row-fluid">
-									<span class="news-date span3">Aug, 2022</span>
-									<span class="news-content span9">Our paper <a href="papers/articles/pham_pros_mobicom22.pdf" target="_blank">"PROS: an Efficient Pattern-Driven Compressive Sensing Framework for Low-Power Biopotential-based Wearables with On-chip Intelligence"</a> is accepted to MobiCom 2022 <font color="red">[Paper]</font></span>
-								</li>
-
-								<li class="row-fluid">
-									<span class="news-date span3">Jun, 2022</span>
-									<span class="news-content span9">I plan to attend and present my recent work regarding efficient continual learning in mobile computing in <a href="https://mobiuk.org/2022/" target="_blank">MobiUK 2022</a> at UCL on 4-5th July. See you all soon there! <font color="red">[Talk]</font>
-									</span>
-								</li>
-
-								<li class="row-fluid">
-									<span class="news-date span3">May, 2022</span>
-									<span class="news-content span9">I am invited to serve as a Shadow PC member for <a href="https://sensys.acm.org/2022/shadow/" target="_blank">ACM SenSys 2022</a></span>
-								</li>
-
-								<li class="row-fluid">
-									<span class="news-date span3">May, 2022</span>
-									<span class="news-content span9">Our paper <a href="papers/articles/chauhan_on-device-fsl_euspico22.pdf" target="_blank">"Exploring On-Device Learning Using Few Shots for Audio Classification"</a> is accepted to EUSIPCO 2022 <font color="red">[Paper]</font></span>
-								</li>
-
-								<li class="row-fluid">
-									<span class="news-date span3">April, 2022</span>
-									<span class="news-content span9">I started a research internship at <a href="https://research.samsung.com/aicenter_cambridge" target="_blank">Samsung AI Center-Cambridge</a> focusing on optimising DNN processing on microcontrollers.</span>
-								</li>
-
-								<li class="row-fluid">
-									<span class="news-date span3">Feb, 2022</span>
-									<span class="news-content span9">Our paper <a href="papers/articles/shatilov_myokey_tmc22.pdf" target="_blank">"MyoKey: Inertial Motion Sensing and Gesture-based QWERTY Keyboard for Extended Realities"</a> is accepted to TMC <font color="red">[Paper]</font></span>
-								</li>
-
-								<li class="row-fluid">
-									<span class="news-date span3">Feb, 2022</span>
-									<span class="news-content span9">I have been invited to give a talk about YONO (our recent IPSN paper) at KMA <font color="red">[Talk]</font>
-									</span>
-								</li>
-
-								<li class="row-fluid">
-									<span class="news-date span3">Jan, 2022</span>
-									<span class="news-content span9">I have been invited to give 2 talks regarding on-device continual leanring and multi-task learning on heterogeneous DNNs at KAIST <font color="red">[Talk]</font>
-									</span>
-								</li>
-
-								<li class="row-fluid">
-									<span class="news-date span3">Jan, 2022</span>
-									<span class="news-content span9">I visited Prof. Lik-Hang Lee's <a href="https://www.lhlee.com/arm-lab" target="_blank">ARM LAB</a> at KAIST for a month</span>
-								</li>
-
-								<li class="row-fluid">
-									<span class="news-date span3">Jan, 2022</span>
-									<span class="news-content span9">Our paper <a href="papers/articles/kwon_yono_ipsn22.pdf" target="_blank">"YONO: Modeling Multiple Heterogeneous Neural Networks on Microcontrollers"</a> is accepted to IPSN 2022 <font color="red">[Paper]</font></span>
-								</li>
-
-								<li class="row-fluid">
-									<span class="news-date span3">Jan, 2022</span>
-									<span class="news-content span9">Mentored students' paper <a href="papers/articles/das_gpu-training_percom22.pdf" target="_blank">"Enabling On-Device Smartphone GPU based Training: Lessons Learned"</a> is accepted to PerFail 2022, co-located with PerCom 2022. <b>Congrats Anish Das</b> <font color="red">[Paper]</font></span>
-								</li>
-
-								<li class="row-fluid">
-									<span class="news-date span3">Dec, 2021</span>
-									<span class="news-content span9">Our paper <a href="papers/articles/kwon_exploring_sec21.pdf" target="_blank">"Exploring System Performance of Continual Learning for Mobile and Embedded Sensing Applications"</a> won the <font color="red"><b>Best Paper Award</b></font> at SEC 2021</span>
 								</li>
 
 							</ul>
