--- a/log.html
+++ b/log.html
@@ -123,6 +123,22 @@
                             <ul class="news">
 
                                 <li class="row-fluid">
+									<span class="news-date span3">Jan, 2026</span>
+									<span class="news-content span9">I will attend <a href="https://aaai.org/conference/aaai/aaai-26/" target="_blank">AAAI 2026</a> to present our paper <a href="papers/articles/kwon_hierarchicalprune_aaai26.pdf" target="_blank">"HierarchicalPrune: Position-Aware Compression for Large-Scale Diffusion Models"</a>. See you all in Singapore! <font color="red">[Talk]</font>
+									</span>
+								</li>
+
+								<li class="row-fluid">
+									<span class="news-date span3">Nov, 2025</span>
+									<span class="news-content span9">Our paper <a href="papers/articles/kwon_hierarchicalprune_aaai26.pdf" target="_blank">"HierarchicalPrune: Position-Aware Compression for Large-Scale Diffusion Models"</a> is accepted by AAAI 2026 <font color="red">[Paper]</font></span>
+								</li>
+
+								<li class="row-fluid">
+									<span class="news-date span3">Oct, 2025</span>
+									<span class="news-content span9">Our paper <a href="papers/articles/kwon_mobilepicasso_2025.pdf" target="_blank">"Efficient High-Resolution Image Editing with Hallucination-Aware Loss and Adaptive Tiling"</a> is now on arXiv <font color="red">[Preprint]</font></span>
+								</li>
+
+                                <li class="row-fluid">
 									<span class="news-date span3">Aug, 2025</span>
 									<span class="news-content span9">Our paper <a href="papers/articles/kwon_hierarchicalprune_2025.pdf" target="_blank">"HierarchicalPrune: Position-Aware Compression for Large-Scale Diffusion Models"</a> is now on arXiv <font color="red">[Preprint]</font></span>
 								</li>
