added SBPA silver information to the papers

--- a/log.html
+++ b/log.html
@@ -139,6 +139,11 @@
 								</li>
 
                                 <li class="row-fluid">
+                                    <span class="news-date span3">Sep, 2025</span>
+                                    <span class="news-content span9">Our paper <a href="papers/articles/kwon_mobilepicasso_2025.pdf" target="_blank">"MobilePicasso: Efficient High-Resolution Image Editing with Hallucination-Aware Loss and Adaptive Tiling"</a> won the <font color="red"><b>Samsung Best Paper Silver Award</b></font></span>
+                                </li>
+
+                                <li class="row-fluid">
 									<span class="news-date span3">Aug, 2025</span>
 									<span class="news-content span9">Our paper <a href="papers/articles/kwon_hierarchicalprune_2025.pdf" target="_blank">"HierarchicalPrune: Position-Aware Compression for Large-Scale Diffusion Models"</a> is now on arXiv <font color="red">[Preprint]</font></span>
 								</li>
@@ -176,6 +181,11 @@
                                 <li class="row-fluid">
                                     <span class="news-date span3">Sep, 2024</span>
                                     <span class="news-content span9">Our paper <a href="" target="_blank">"TinyTTA: Efficient Test-time Adaptation via Early-exit Ensembles on Edge Devices"</a> is accepted by NeurIPS 2024 <font color="red">[Paper]</font></span>
+                                </li>
+
+                                <li class="row-fluid">
+                                    <span class="news-date span3">Sep, 2024</span>
+                                    <span class="news-content span9">Our paper <a href="papers/articles/kwon_tinytrain_icml24.pdf" target="_blank">"TinyTrain: Resource-Aware Task-Adaptive Sparse Training of DNNs at the Data-Scarce Edge"</a> won the <font color="red"><b>Samsung Best Paper Silver Award</b></font></span>
                                 </li>
 
                                 <li class="row-fluid">
