--- a/research.html
+++ b/research.html
@@ -159,6 +159,7 @@
 										<i><font color="red">arXiv 2025</font></i>
 										| <a href="papers/articles/kwon_mobilepicasso_2025.pdf" target="_blank">PDF</a>
 										| <a href="https://arxiv.org/abs/2510.06295" target="_blank">Link</a>
+										<br><award><b>Samsung Best Paper Silver Award 2025</b></award>
 									</p></li>
 
 									<li id="preprints-odtta">
