--- a/index.html
+++ b/index.html
@@ -201,6 +201,11 @@
 								</li>
 
 								<li class="row-fluid">
+                                    <span class="news-date span3">Sep, 2025</span>
+                                    <span class="news-content span9">Our paper <a href="papers/articles/kwon_mobilepicasso_2025.pdf" target="_blank">"MobilePicasso: Efficient High-Resolution Image Editing with Hallucination-Aware Loss and Adaptive Tiling"</a> won the <font color="red"><b>Samsung Best Paper Silver Award</b></font></span>
+                                </li>
+
+								<li class="row-fluid">
 									<span class="news-date span3">Aug, 2025</span>
 									<span class="news-content span9">Our paper <a href="papers/articles/kwon_hierarchicalprune_aaai26.pdf" target="_blank">"HierarchicalPrune: Position-Aware Compression for Large-Scale Diffusion Models"</a> is now on arXiv <font color="red">[Preprint]</font></span>
 								</li>
@@ -238,6 +243,11 @@
 								<li class="row-fluid">
 									<span class="news-date span3">Sep, 2024</span>
 									<span class="news-content span9">Our paper <a href="papers/articles/jia_tinytta_neurips24.pdf" target="_blank">"TinyTTA: Efficient Test-time Adaptation via Early-exit Ensembles on Edge Devices"</a> is accepted by NeurIPS 2024 <font color="red">[Paper]</font></span>
+								</li>
+
+								<li class="row-fluid">
+									<span class="news-date span3">Sep, 2024</span>
+									<span class="news-content span9">Our paper <a href="papers/articles/kwon_tinytrain_icml24.pdf" target="_blank">"TinyTrain: Resource-Aware Task-Adaptive Sparse Training of DNNs at the Data-Scarce Edge"</a> won the <font color="red"><b>Samsung Best Paper Silver Award</b></font></span>
 								</li>
 
 								<li class="row-fluid">
@@ -320,6 +330,7 @@
 											<i><font color="red">arXiv 2025</font></i>
 											| <a href="papers/articles/kwon_mobilepicasso_2025.pdf" target="_blank">PDF</a>
 											| <a href="https://arxiv.org/abs/2510.06295" target="_blank">Link</a>
+											<br><award><b>Samsung Best Paper Silver Award 2025</b></award>
 										</div>
 									</div>
 
