add student info, Oszkár Urbán.

--- a/index.html
+++ b/index.html
@@ -830,6 +830,9 @@
 
 									<li>&nbsp;&bullet;&nbsp; <a>Sudarshan Sreeram</a> (Ph.D. at the University of Cambridge, co-supervised by Prof. Cecilia Mascolo)
 										<br>&nbsp;&nbsp;&nbsp; Topic: <b>Efficient and reliable inference and test-time adaptation on edge devices</b></li>
+
+									<li>&nbsp;&bullet;&nbsp; <a>Oszkár Urbán</a> (M.Phil. at the University of Cambridge, co-supervised by Prof. Cecilia Mascolo)
+										<br>&nbsp;&nbsp;&nbsp; Topic: <b>Accelerating reasoning LLMs via efficient speculative decoding</b></li>
 								</ul>
 								<br>
 
