updated/added paper, poster, slides of hierarchicalprune and added tinytrain's poster/slides link to research.html

--- a/index.html
+++ b/index.html
@@ -387,8 +387,10 @@
 											<font color="#aaaaaa"><font color="#000000"><u>Young D. Kwon*</u></font>, Rui Li*, Sijia Li, Da Li, Sourav Bhattacharya, and Stylianos Venieris</font><br>
 											<i><font color="red">AAAI 2026</font></i>
 											| <a href="papers/articles/kwon_hierarchicalprune_aaai26.pdf" target="_blank">PDF</a>
-											| <a href="https://arxiv.org/abs/2508.04663v2" target="_blank">Link</a>
+											| <a href="papers/poster/poster_kwon_hierarchicalprune_aaai26.pdf" target="_blank">Poster</a>
+											| <a href="papers/slides/slides_kwon_hierarchicalprune_aaai26.pdf" target="_blank">Slides</a>
 											| <a href="papers/bibs/kwon_hierarchicalprune_aaai26.txt" target="_blank">BibTex</a>
+											| <a href="https://arxiv.org/abs/2508.04663" target="_blank">Link</a>
 											| * Co-first authors
 										</div>
 									</div>
