--- a/research.html
+++ b/research.html
@@ -219,8 +219,10 @@
 										<font color="#aaaaaa"><font color="#000000"><u>Young D. Kwon*</u></font>, Rui Li*, Sijia Li, Da Li, Sourav Bhattacharya, and Stylianos Venieris</font><br>
 										<i><font color="red">AAAI 2026</font></i>
 										| <a href="papers/articles/kwon_hierarchicalprune_aaai26.pdf" target="_blank">PDF</a>
-										| <a href="https://arxiv.org/abs/2508.04663v2" target="_blank">Link</a>
+										| <a href="papers/poster/poster_kwon_hierarchicalprune_aaai26.pdf" target="_blank">Poster</a>
+										| <a href="papers/slides/slides_kwon_hierarchicalprune_aaai26.pdf" target="_blank">Slides</a>
 										| <a href="papers/bibs/kwon_hierarchicalprune_aaai26.txt" target="_blank">BibTex</a>
+										| <a href="https://arxiv.org/abs/2508.04663" target="_blank">Link</a>
 										| * Co-first authors
 									</p></li>
 
@@ -230,6 +232,8 @@
 										<font color="#aaaaaa"><font color="#000000"><u>Young D. Kwon</u></font>, Rui Li, Stylianos I. Venieris, Jagmohan Chauhan, Nicholas D. Lane, and Cecilia Mascolo</font><br>
 										<i><font color="red">ICML 2024</font></i>
 										| <a href="papers/articles/kwon_tinytrain_icml24.pdf" target="_blank">PDF</a>
+										| <a href="papers/poster/[Final]poster_kwon_tinytrain_icml24.pdf" target="_blank">Poster</a>
+										| <a href="papers/slides/[Final]slides_kwon_tinytrain_icml24.pdf" target="_blank">Slides</a>
 										| <a href="papers/bibs/kwon_tinytrain_icml24.txt" target="_blank">BibTex</a>
 										| <a href="https://arxiv.org/abs/2307.09988" target="_blank">Link</a>
 										<br><award><b>Samsung Best Paper Silver Award 2024</b></award>
