--- a/index.html
+++ b/index.html
@@ -392,6 +392,7 @@
 											| <a href="papers/bibs/kwon_hierarchicalprune_aaai26.txt" target="_blank">BibTex</a>
 											| <a href="https://arxiv.org/abs/2508.04663" target="_blank">Link</a>
 											| * Co-first authors
+											<br><award><b>Full Paper Acceptance Rate: 17.5%</b></award>
 										</div>
 									</div>
 
