updated the metaclbench paper
added HierarchicalPrune in talks section

updated news in both log and index htmls

added a new paper, PEA at ICLR 2026

added PEA teaser image

updated metaclbench paper

--- a/index.html
+++ b/index.html
@@ -186,13 +186,18 @@
 
 								<li class="row-fluid">
 									<span class="news-date span3">Jan, 2026</span>
+									<span class="news-content span9">Our paper <a >"Architecture-Agnostic Test-Time Adaptation via Backprop-Free Embedding Alignment"</a> is accepted by <a href="https://iclr.cc/Conferences/2026" target="_blank">ICLR 2026</a>! <font color="red">[Paper]</font></span>
+								</li>
+
+								<li class="row-fluid">
+									<span class="news-date span3">Jan, 2026</span>
 									<span class="news-content span9">I will attend <a href="https://aaai.org/conference/aaai/aaai-26/" target="_blank">AAAI 2026</a> to present our paper <a href="papers/articles/kwon_hierarchicalprune_aaai26.pdf" target="_blank">"HierarchicalPrune: Position-Aware Compression for Large-Scale Diffusion Models"</a>. See you all in Singapore! <font color="red">[Talk]</font>
 									</span>
 								</li>
 
 								<li class="row-fluid">
 									<span class="news-date span3">Nov, 2025</span>
-									<span class="news-content span9">Our paper <a href="papers/articles/kwon_hierarchicalprune_aaai26.pdf" target="_blank">"HierarchicalPrune: Position-Aware Compression for Large-Scale Diffusion Models"</a> is accepted by AAAI 2026 <font color="red">[Paper]</font></span>
+									<span class="news-content span9">Our paper <a href="papers/articles/kwon_hierarchicalprune_aaai26.pdf" target="_blank">"HierarchicalPrune: Position-Aware Compression for Large-Scale Diffusion Models"</a> is accepted by <a href="https://aaai.org/conference/aaai/aaai-26/" target="_blank">AAAI 2026</a>! <font color="red">[Paper]</font></span>
 								</li>
 
 								<li class="row-fluid">
@@ -242,7 +247,7 @@
 
 								<li class="row-fluid">
 									<span class="news-date span3">Sep, 2024</span>
-									<span class="news-content span9">Our paper <a href="papers/articles/jia_tinytta_neurips24.pdf" target="_blank">"TinyTTA: Efficient Test-time Adaptation via Early-exit Ensembles on Edge Devices"</a> is accepted by NeurIPS 2024 <font color="red">[Paper]</font></span>
+									<span class="news-content span9">Our paper <a href="papers/articles/jia_tinytta_neurips24.pdf" target="_blank">"TinyTTA: Efficient Test-time Adaptation via Early-exit Ensembles on Edge Devices"</a> is accepted by <a href="https://neurips.cc/Conferences/2024" target="_blank">NeurIPS 2024</a>! <font color="red">[Paper]</font></span>
 								</li>
 
 								<li class="row-fluid">
@@ -379,6 +384,16 @@
 						<div class="row-fluid">
 							<div class="span12">
 								<div class="section">Selected Publications</div>
+
+									<div id="publication-pea" class="project-entry">
+										<div class="project-left span4"><a href="images/projects/pea/teaser.png"><img src="images/projects/pea/teaser.png"></a></div>
+										<div class="project-right span8">
+											<b>Architecture-Agnostic Test-Time Adaptation via Backprop-Free Embedding Alignment</b><br>
+											<font color="#aaaaaa">Xiao Ma, <font color="#000000"><u>Young D. Kwon</u></font>, Pan Zhou, and Dong Ma</font><br>
+											<i><font color="red">ICLR 2026</font></i>
+											| camera-ready version will be available soon
+										</div>
+									</div>
 
 									<div id="publication-hierarchicalprune" class="project-entry">
 										<div class="project-left span4"><a href="images/projects/hierarchicalprune/teaser.png"><img src="images/projects/hierarchicalprune/teaser.png"></a></div>
@@ -901,6 +916,8 @@
 								<div class="section" id="invited-talks">Talks</div>
 									<ul>
 										<!-- \textbf{}] [\textbf{}]  -->
+										<li><a href="https://aaai.org/conference/aaai/aaai-26/" target="_blank">[AAAI 2026]</a>[<b>24 Jan 2026</b>] HierarchicalPrune: Position-Aware Compression for Large-Scale Diffusion Models.</li>
+
 										<li><a href="https://mlcommons.org/about-us/programs/" target="_blank">[ML & Systems Rising Stars Forum]</a>[<b>9 May 2025</b>] AI at the Edge: From Training to Generation. Host: Prof. Abdulrahman Mahmoud.</li>
 
 										<li><a href="https://icml.cc/" target="_blank">[ICML 2024]</a>[<b>23 Jul 2024</b>] TinyTrain: Resource-Aware Task-Adaptive Sparse Training of DNNs at the Data-Scarce Edge [<a href="https://icml.cc/virtual/2024/poster/34234" target="_blank">Link</a>].</li>
