--- a/research.html
+++ b/research.html
@@ -213,6 +213,14 @@
 								<div class="section">Publications</div>
 								<ul>
 
+									<li id="publication-pea">
+									<p>
+										<b>Architecture-Agnostic Test-Time Adaptation via Backprop-Free Embedding Alignment</b><br>
+										<font color="#aaaaaa">Xiao Ma, <font color="#000000"><u>Young D. Kwon</u></font>, Pan Zhou, and Dong Ma</font><br>
+										<i><font color="red">ICLR 2026</font></i>
+										| camera-ready version will be available soon
+									</p></li>
+
 									<li id="publication-hierarchicalprune">
 									<p>
 										<b>HierarchicalPrune: Position-Aware Compression for Large-Scale Diffusion Models</b><br>
