--- a/log.html
+++ b/log.html
@@ -122,7 +122,12 @@
                             <h3 id="news-travel">News & Travel</h3>
                             <ul class="news">
 
-                                <li class="row-fluid">
+								<li class="row-fluid">
+									<span class="news-date span3">Jan, 2026</span>
+									<span class="news-content span9">Our paper <a >"Architecture-Agnostic Test-Time Adaptation via Backprop-Free Embedding Alignment"</a> is accepted by <a href="https://iclr.cc/Conferences/2026" target="_blank">ICLR 2026</a>! <font color="red">[Paper]</font></span>
+								</li>
+
+								<li class="row-fluid">
 									<span class="news-date span3">Jan, 2026</span>
 									<span class="news-content span9">I will attend <a href="https://aaai.org/conference/aaai/aaai-26/" target="_blank">AAAI 2026</a> to present our paper <a href="papers/articles/kwon_hierarchicalprune_aaai26.pdf" target="_blank">"HierarchicalPrune: Position-Aware Compression for Large-Scale Diffusion Models"</a>. See you all in Singapore! <font color="red">[Talk]</font>
 									</span>
@@ -130,7 +135,7 @@
 
 								<li class="row-fluid">
 									<span class="news-date span3">Nov, 2025</span>
-									<span class="news-content span9">Our paper <a href="papers/articles/kwon_hierarchicalprune_aaai26.pdf" target="_blank">"HierarchicalPrune: Position-Aware Compression for Large-Scale Diffusion Models"</a> is accepted by AAAI 2026 <font color="red">[Paper]</font></span>
+									<span class="news-content span9">Our paper <a href="papers/articles/kwon_hierarchicalprune_aaai26.pdf" target="_blank">"HierarchicalPrune: Position-Aware Compression for Large-Scale Diffusion Models"</a> is accepted by <a href="https://aaai.org/conference/aaai/aaai-26/" target="_blank">AAAI 2026</a>! <font color="red">[Paper]</font></span>
 								</li>
 
 								<li class="row-fluid">
@@ -138,17 +143,17 @@
 									<span class="news-content span9">Our paper <a href="papers/articles/kwon_mobilepicasso_2025.pdf" target="_blank">"Efficient High-Resolution Image Editing with Hallucination-Aware Loss and Adaptive Tiling"</a> is now on arXiv <font color="red">[Preprint]</font></span>
 								</li>
 
-                                <li class="row-fluid">
+								<li class="row-fluid">
                                     <span class="news-date span3">Sep, 2025</span>
                                     <span class="news-content span9">Our paper <a href="papers/articles/kwon_mobilepicasso_2025.pdf" target="_blank">"MobilePicasso: Efficient High-Resolution Image Editing with Hallucination-Aware Loss and Adaptive Tiling"</a> won the <font color="red"><b>Samsung Best Paper Silver Award</b></font></span>
                                 </li>
 
-                                <li class="row-fluid">
+								<li class="row-fluid">
 									<span class="news-date span3">Aug, 2025</span>
-									<span class="news-content span9">Our paper <a href="papers/articles/kwon_hierarchicalprune_2025.pdf" target="_blank">"HierarchicalPrune: Position-Aware Compression for Large-Scale Diffusion Models"</a> is now on arXiv <font color="red">[Preprint]</font></span>
+									<span class="news-content span9">Our paper <a href="papers/articles/kwon_hierarchicalprune_aaai26.pdf" target="_blank">"HierarchicalPrune: Position-Aware Compression for Large-Scale Diffusion Models"</a> is now on arXiv <font color="red">[Preprint]</font></span>
 								</li>
 
-                                <li class="row-fluid">
+								<li class="row-fluid">
 									<span class="news-date span3">Jul, 2025</span>
 									<span class="news-content span9">I have been invited to serve as <a href="https://www.sigmobile.org/mobisys/2026/organizing_committee/" target="_blank">MobiSys 2026 Publicity Chairs</a> <font color="red">[Service]</font>
 									</span>
@@ -178,10 +183,10 @@
 									</span>
 								</li>
 
-                                <li class="row-fluid">
-                                    <span class="news-date span3">Sep, 2024</span>
-                                    <span class="news-content span9">Our paper <a href="" target="_blank">"TinyTTA: Efficient Test-time Adaptation via Early-exit Ensembles on Edge Devices"</a> is accepted by NeurIPS 2024 <font color="red">[Paper]</font></span>
-                                </li>
+								<li class="row-fluid">
+									<span class="news-date span3">Sep, 2024</span>
+									<span class="news-content span9">Our paper <a href="papers/articles/jia_tinytta_neurips24.pdf" target="_blank">"TinyTTA: Efficient Test-time Adaptation via Early-exit Ensembles on Edge Devices"</a> is accepted by <a href="https://neurips.cc/Conferences/2024" target="_blank">NeurIPS 2024</a>! <font color="red">[Paper]</font></span>
+								</li>
 
                                 <li class="row-fluid">
                                     <span class="news-date span3">Sep, 2024</span>
